- Fixed bug #45743 (property_exists fails to find static protected member in child class) In general, now property_exists() behave like method_exists() (ie. independs of context/visibibility)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@265080 c90b9560-bf6c-de11-be94-00142212c4b1