Zend/tests/011.phpt
@@ -59,16 +59,16 @@ NULL
 Warning: property_exists() expects exactly 2 parameters, 1 given in %s on line %d
 NULL
 bool(true)
-bool(false)
-bool(false)
+bool(true)
+bool(true)
 bool(false)
 bool(false)
 bool(false)
 bool(false)
 bool(false)
 bool(true)
-bool(false)
-bool(false)
+bool(true)
+bool(true)
 bool(false)
 bool(false)
 
@@ -84,6 +84,6 @@ bool(true)
 bool(true)
 bool(true)
 bool(true)
-bool(false)
+bool(true)
 bool(true)
 Done
