Zend/tests/bug42211.phpt
@@ -22,8 +22,8 @@ $b = new B();
 $b->foo();
 --EXPECT--
 bool(true)
-bool(false)
-bool(false)
 bool(true)
 bool(true)
-bool(false)
+bool(true)
+bool(true)
+bool(true)
